<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
    This file is part of "Tea steeping" android application.

    "Tea steeping" is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    "Tea steeping" is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with "Tea steeping". If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="app_description">Simple application listing instructions for steeping different tea types. Includes guides for temperature, steeping time and good practices. It also lets you quickly setup an appropriate timer in system default stopwatch app. Supports both Fahrenheit and Celsius units.</string>
    <string name="app_name">Tea Steeping</string>

    <string name="attribution_app_icon">App icon made by Freepik from www.flaticon.com is licensed by CC 3.0 BY</string>

    <string name="attributions">Attributions</string>

    <string name="contact_me">Contact me</string>

    <string name="copyright">Copyright © %1$d Michał Daniel</string>
    <string name="copyright_and_license"><![CDATA[Copyright & license]]></string>

    <string name="file_bug_report">File bug report</string>

    <string name="find_this_app">Find this app online</string>

    <string name="from_celcius_to_celcius">From %1$d℃ to %2$d℃</string>
    <string name="from_fahrenheit_to_fahrenheit">From %1$d℉ to %2$d℉</string>

    <string name="get_the_source_code">Get the source code</string>

    <string name="ok">OK</string>

    <string name="personal_website">Personal website</string>

    <string name="privacy">Privacy</string>

    <string name="rate_dialog_cancel">Later</string>
    <string name="rate_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support tea lover!</string>
    <string name="rate_dialog_rate">Rate now</string>
    <string name="rate_dialog_thanks">No, thanks</string>
    <string name="rate_dialog_title">Rate this app</string>

    <string name="read_privacy_policy">Read privacy policy</string>

    <string name="release_under_the_gnu_gpl">Released under the GNU GPL v3 license or later</string>

    <string name="select_time">Select time</string>

    <string name="settings_description_units">Use imperial units of temperature</string>
    <string name="settings_timer">Skip system timer</string>
    <string name="settings_timer_description">Instantly start timer without showing system app UI</string>
    <string name="settings_ui">Colorful UI</string>
    <string name="settings_ui_description">Use colored background on tea cards</string>
    <string name="settings_units">Imperial units</string>

    <string name="steep_for_to_minutes">steep for %1$d to %2$d minutes."</string>

    <string name="stopwatch_started">Your tea timer was started in system default stopwatch application.</string>

    <string name="support_suggestions_bug_reports"><![CDATA[Support, suggestions & bug reports]]></string>

    <string name="tea_black">Black</string>
    <string name="tea_darjeeling">Darjeeling</string>
    <string name="tea_description_black">Use boiling water.</string>
    <string name="tea_description_darjeeling">Few degrees below boiling.</string>
    <string name="tea_description_green">Boil water then let cool to temperature.</string>
    <string name="tea_description_half_full_baked_puerh">First soak for 30 seconds, flush, then re-steep.</string>
    <string name="tea_description_herbal">Follow package brewing instructions, longer brew results in stronger tea.</string>
    <string name="tea_description_jasmine">Treat the same as a green tea.</string>
    <string name="tea_description_matcha">Follow package brewing instructions.</string>
    <string name="tea_description_mate">Experiment with temperature and time to taste.</string>
    <string name="tea_description_oolong">Rinsing leaves first with hot water allows the leaves to open.</string>
    <string name="tea_description_raw_puerh">First soak for 30 seconds, flush, then re-steep.</string>
    <string name="tea_description_rooibos">Generally cannot over steep.</string>
    <string name="tea_description_white">Boil water then let cool to temperature.</string>
    <string name="tea_description_yellow">Treat the same as a green tea but steep longer.</string>
    <string name="tea_green">Green</string>
    <string name="tea_half_full_baked_puerh">Roasted Pu-erh</string>
    <string name="tea_herbal">Herbal</string>
    <string name="tea_jasmine">Jasmine</string>
    <string name="tea_matcha">Matcha</string>
    <string name="tea_mate">Mate</string>
    <string name="tea_oolong">Oolong</string>
    <string name="tea_raw_puerh">Pu-erh</string>
    <string name="tea_rooibos">Rooibos</string>
    <string name="tea_steeping">%1$s tea steeping"</string>
    <string name="tea_white">White</string>
    <string name="tea_yellow">Yellow</string>

    <string name="use_to_make_a_cup">Use %1$d %2$s to make a cup.</string>

    <string name="version_no">Version: %1$s</string>
    <string name="version_unknown">Version unknown</string>
</resources>
