<?xml version="1.0" encoding="utf-8"?>
<!--
    This file is part of "Tea steeping" android application.

    "Tea steeping" is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 3 of the License, or
    (at your option) any later version.

    "Tea steeping" is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with "Tea steeping". If not, see <http://www.gnu.org/licenses/>.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="ViewModel"
            type="eu.morningbird.teasteeping.view.model.TeaPageFragmentVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{context.getColor(ViewModel.backgroundColor)}"
        tools:background="@color/colorTeaMatcha"
        tools:context=".view.TeaPageFragment">

        <TextView
            android:id="@+id/teaNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/tea_name_margin"
            android:fontFamily="sans-serif-light"
            android:text="@{ViewModel.teaName}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="@dimen/tea_name_text_size"
            app:layout_constraintBottom_toTopOf="@+id/teaDescriptionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/tea_matcha" />

        <TextView
            android:id="@+id/teaDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tea_description_margin"
            android:layout_marginBottom="@dimen/tea_description_in_between_margin"
            android:fontFamily="sans-serif-light"
            android:text="@{ViewModel.teaDescription}"
            android:textAlignment="center"
            android:textSize="@dimen/tea_description_text_size"
            app:layout_constraintBottom_toTopOf="@+id/quantityInstructionsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teaNameTextView"
            tools:text="@string/tea_description_matcha" />

        <TextView
            android:id="@+id/quantityInstructionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tea_description_in_between_margin"
            android:layout_marginBottom="@dimen/tea_description_margin"
            android:fontFamily="sans-serif-light"
            android:text="@{ViewModel.quantityInstructions}"
            android:textAlignment="center"
            android:textSize="@dimen/tea_description_text_size"
            app:layout_constraintBottom_toTopOf="@+id/temperatureTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teaDescriptionTextView"
            tools:text="@string/use_to_make_a_cup" />

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tea_instructions_top_margin"
            android:layout_marginBottom="@dimen/tea_instructions_in_between_margin"
            android:fontFamily="sans-serif-light"
            android:text="@{ViewModel.steepingTemperature}"
            android:textAlignment="center"
            android:textSize="@dimen/tea_instructions_text_size"
            app:layout_constraintBottom_toTopOf="@+id/timeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantityInstructionsTextView"
            tools:text="@string/from_celcius_to_celcius" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tea_instructions_in_between_margin"
            android:layout_marginBottom="@dimen/tea_instructions_bottom_margin"
            android:fontFamily="sans-serif-light"
            android:text="@{ViewModel.steepingTime}"
            android:textAlignment="center"
            android:textSize="@dimen/tea_instructions_text_size"
            app:layout_constraintBottom_toTopOf="@+id/setTimerFloatingActionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperatureTextView"
            tools:text="@string/steep_for_to_minutes" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/setTimerFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tea_timer_margin"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{ViewModel::setTimerFloatingActionButtonOnClick}"
            android:src="@drawable/ic_timer"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>